--- a/webresponsiva CV/style.css
+++ b/webresponsiva CV/style.css
@@ -2,13 +2,39 @@ body {
   background-color: #fff;
 }
 
+h1 {
+  font-size: 2.3rem;
+}
+
+h2 {
+  font-size: 2.2rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
 .wrapper {
-  border: 4px solid #fff;
-  margin: auto;
+  width: 992 px;
+  border: solid #fff;
+  margin-left: 5%;
+  margin-right: 5%;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(3, 1fr);
-  grid-template-areas: "n1 n4" "n1 n4" "n1 n9";
+  grid-template-areas: "n1 n4" "n1 n4" "n10 0";
   gap: 20px;
   background: #fff;
 }
@@ -22,52 +48,18 @@ body {
 .wrapper .item4 {
   grid-area: n4;
 }
-.wrapper .item4 h1 {
-  margin-bottom: 10px;
-}
-.wrapper .item4 h2 {
-  margin: 20px 0 10px;
-}
-.wrapper .item4 ul {
-  margin-bottom: 20px;
-}
-.wrapper .item4 ul li {
-  margin-bottom: 10px;
-}
-.wrapper .item4 ul li h3 {
-  margin-bottom: 5px;
-}
-.wrapper .item4 ul li p {
-  margin-bottom: 5px;
-}
 .wrapper .item5 {
   background: #97a2a6;
   grid-area: n5;
 }
-.wrapper .item5 p {
-  margin-bottom: 10px;
-}
-.wrapper .item9 {
-  grid-area: n9;
-}
-.wrapper .item9 h2 {
-  margin: 20px 0 10px;
-}
-.wrapper .item9 ul {
-  margin-bottom: 20px;
-}
-.wrapper .item9 ul li {
-  margin-bottom: 10px;
-}
-@media only screen and (max-width: 576px) {
+@media screen and (max-width: 650px) {
   .wrapper {
-    grid-template-areas: "n1" "n4" "n5" "n9";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    width: 576px;
+    grid-template-areas: "n1 " "n4 " "n5 " "n10 ";
+    grid-template-columns: 1fr !important;
   }
   .wrapper .item1 {
     text-align: center;
-    padding: 10px;
   }
   .wrapper .item1 ul li {
     list-style-type: none;
@@ -76,31 +68,47 @@ body {
     text-align: center;
   }
   .wrapper .item4 h1 {
-    margin-top: 20px;
+    margin-top: 50px;
   }
   .wrapper .item4 ul li {
     list-style-type: none;
   }
   .wrapper .item5 {
     text-align: center;
-    margin-bottom: 20px;
-  }
-  .wrapper .item9 {
-    text-align: center;
-  }
-  .wrapper .item9 ul li {
-    list-style-type: none;
+    margin-bottom: 50px;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .wrapper {
-    grid-template-columns: 1fr 1fr;
-    list-style-type: none;
-  }
-  .wrapper .item5 {
-    margin-bottom: 0;
-    list-style-type: none;
-  }
+.wrapper .modulos {
+  grid-area: n10;
+}
+.wrapper .modulos table {
+  border-collapse: collapse;
+  width: 100%;
+}
+.wrapper .modulos th, .wrapper .modulos td {
+  border: 1px solid black;
+  padding: 10px;
+}
+.wrapper .modulos tbody tr:nth-child(14n+1) {
+  background-color: #2ced11;
+}
+.wrapper .modulos tbody tr:nth-child(14n+2) {
+  background-color: #f11b0d;
+}
+.wrapper .modulos tbody tr:nth-child(14n+3) {
+  background-color: #ef0fe2;
+}
+.wrapper .modulos tbody tr:nth-child(14n+4) {
+  background-color: #11eedc;
+}
+.wrapper .modulos tbody tr:nth-child(14n+5) {
+  background-color: #e5ee11;
+}
+.wrapper .modulos tbody tr:nth-child(14n+6) {
+  background-color: #888377;
+}
+.wrapper .modulos tbody tr:nth-child(14n+7) {
+  background-color: #f0960e;
 }
 
 /*# sourceMappingURL=style.css.map */
